2014-05-01  Juan J. Merelo Guervós  <jjmerelo@gmail.com>

	* MANIFEST: Changing manifest for the new version

Revision history for Text-Hoborg

0.0.1  Mon May 27 07:59:10 2013
       Initial release.
