@@ -9,11 +9,12 @@ WriteMakefile(
     ABSTRACT_FROM       => 'lib/Test/Text.pm',
     PL_FILES            => {},
     PREREQ_PM => {
-        'Test::More' => 0,
-        'version'    => 0,
-	'File::Slurp' => 0,
-	'Text::Hunspell' => 2.08,
-	'Test::Output' => 1.03
+		  'Test::More' => 0,
+		  'version'    => 0,
+		  'File::Slurp' => 0,
+		  'Text::Hunspell' => 2.08,
+		  'Test::Output' => 1.03,
+		  'Test::Simple' => 1.0
     },
     dist                => { COMPRESS => 'gzip -9f', SUFFIX => 'gz', },
     clean               => { FILES => 'Test-Text-*' },
